--- a/WS18/Elisa/sql_postgis_exc.Rmd
+++ b/WS18/Elisa/sql_postgis_exc.Rmd
@@ -86,7 +86,6 @@ st_transform(geometry, 25832),
   st_transform(ST_GeomFromText('POINT (48.0036891 7.8539392)', 4326), 25832)
 ) as distance_toherdabau 
 from stations 
-limit 4
 
 ```
 ```{sql connection=con}
@@ -101,13 +100,13 @@ st_transform(geometry, 25832),
   st_transform(ST_GeomFromText('POINT (47.9958609 7.8523349)', 4326), 25832)
 ) as distance_tomunster 
 from stations 
-limit 4
+
 
 ```
 ```{sql connection=con}
-select * from dist_to_muns where distance_tomunster <1500
+select * from dist_to_muns where distance_tomunster <150000
 ```
-Comment: I think it is strange HOBO stations do not appear in this query. I don't understand why only BW stations appear as a result. 
+QUESTION: I think it is strange HOBO stations do not appear in this query. I don't understand why only BW stations appear as a result. 
 
 In class, you joined the vegetation class table with its lookup table and calculated the areas for each feature. As you might have noticed, there are duplicates in the description field. 
 This is obviously the reason why a lookup table was used. Aggregate these classes together and calculate the overall area for each cover class.
@@ -122,16 +121,19 @@ Redo the last step but query the data with nice looking values like '34.1 km²' 
 
 
 ```{sql connection=con}
-create temporary table tot_area_v as
-select d.name, round((sum(st_area(vc.geometry))/1000000)) as tot_area_Km2 from vegetation_cover vc join vegetation_cover_description d on vc.description_id=d.id
+select d.name, round((sum(st_area(vc.geometry))/1000000)) || ' Km2' as tot_area from vegetation_cover vc join vegetation_cover_description d on vc.description_id=d.id
 group by d.name
-```
-```{sql connection=con}
-select * from tot_area_v 
 ```
 
 ```{sql connection=con}
-select name, tot_area_Km2, round(tot_area_Km2*100/sum) as Ratio from tot_area_v, (SELECT SUM(tot_area_Km2) FROM tot_area_v AS amount) t
+create temporary table tot_area_v as 
+select d.name, (sum(st_area(vc.geometry))/1000000) as tot_area_km2 from vegetation_cover vc join vegetation_cover_description d on vc.description_id=d.id 
+group by d.name
+```
+
+
+```{sql connection=con}
+select name, tot_area_Km2, round(tot_area_Km2*100/sum) as Ratio from tot_area_v, (SELECT SUM(tot_area_Km2) FROM tot_area_v) t
 ```
 
 
@@ -158,7 +160,7 @@ order by distance_WGS84 ASC limit 10
 
 ```
 <div class="alert alert-info">
-Answer: Small differences ammong the first two coordinates systems are due to difference in precition for the location. The bigger difference in the WGS84 is because this coordinate system is in degrees, so, the result is not in meters and can not be compared with the two other coordinate system, which are in meters. 
+ Answer: Small differences among the first two coordinates systems are due to coordinate transformation errors. The bigger difference in the WGS84 is because this coordinate system was designed to be used in the whole earth surface. This characteristic  makes the precision of the coordinates lower in comparison to coordinate systems designed to be used in specific, areas such as UTM32N or Gauss Kruger DHDN Z3 which are defined for smaller zones of the world. This last two coordinate systems have the origin of the coordinate system close to the area where they are used.   
 </div>
 
 
