--- a/exercises/sql_postgis_lk.Rmd
+++ b/exercises/sql_postgis_lk.Rmd
@@ -92,7 +92,7 @@ where st_within(st_transform(geometry, 25832), st_buffer(st_transform(st_setsrid
 In class, you joined the vegetation class table with its lookup table and calculated the areas for each feature. As you might have noticed, there are duplicates in the description field. 
 This is obviously the reason why a lookup table was used. Aggregate these classes together and calculate the overall area for each cover class.
 ```{sql connection=con}
-select name, description_id, sum(area) / 1000000 as "area [km2]" from
+select name, description_id, sum(area) / 1000000 as "area [km²]" from
   (select vc.id, vc.description_id, d.name, st_area(vc.geometry) as area from
     (select id, description_id, geometry from vegetation_cover) vc
     join vegetation_cover_description d 
@@ -114,42 +114,45 @@ create temporary table share_lk as
   group by name, description_id) b
 ```  
 ```{sql connection=con}  
-select name, description_id, area, round(cast((area/(select sum(area) from share_lk))*100 as numeric),1) as ratio from share_lk
+select name, description_id, area || 'km²' as area, round(cast((area/(select sum(area) from share_lk))*100 as numeric),1) || '%' as ratio from share_lk
 ```
 
 
 Do the einzugsgebiete and vegetation_cover tables cover the same area?
 ```{sql connection=con}
-select * from 
-    (select st_union(geometry) as agg_geometry from einzugsgebiete) e
-    join 
-    (select st_union(geometry) as agg_geometry from vegetation_cover) vc
-on st_within(vc.agg_geometry, e.agg_geometry) or st_within(e.agg_geometry, vc.agg_geometry)
+ 
+    select 'catchment areas' as "type", st_area(st_union(geometry))/100000 as "area [km²]" from einzugsgebiete 
+    union
+    select 'vegetation' as "type", st_area(st_union(geometry))/100000 as "area [km²]" from vegetation_cover
 ```
+
 
 Select the 10 stations closest to your HOBO location and query their name and geometry. 
 Calculate the distance to your HOBO location in different coordinate systems. Use ETRS89/UTM 32N; DHDN/GK Z3 and WGS84/Pseudomercartor.
 Do the distances differ and if yes, why?
 ```{sql connection=con}
+--UTM zone 32N
 select name, st_asewkt(st_transform(geometry, 25832)) as geometry, 
     st_distance(st_transform(geometry, 25832), (select st_transform(geometry, 25832) from     stations where id = 12)) / 1000 as "distance [km]" 
 from stations where id != 12 
 order by "distance [km]" asc limit 10;
 ```
 ```{sql connection=con}
+--DHDN / 3-degree Gauss-Kruger zone 3
 select name, st_asewkt(st_transform(geometry, 31467)) as geometry, 
     st_distance(st_transform(geometry, 31467), (select st_transform(geometry, 31467) from     stations where id = 12)) / 1000 as "distance [km]" 
 from stations where id != 12 
 order by "distance [km]" asc limit 10;
 ```
 ```{sql connection=con}
+--WGS84 Web Mercator
 select name, st_asewkt(st_transform(geometry, 3857)) as geometry, 
     st_distance(st_transform(geometry, 3857), (select st_transform(geometry, 3857) from     stations where id = 12)) / 1000 as "distance [km]" 
 from stations where id != 12 
 order by "distance [km]" asc limit 10;
 ```
 <div class="alert alert-info">
-Answer: They differ, because the different srid were used describing different coordinate systems and geodetic datum. The different mapping through this srids results in different distances in the query.
+Answer: They differ, because the different srid were used describing different coordinate reference system. There is no big difference between the used UTM zone 32N and DHDN / 3-degree Gauss-Kruger zone 3, because they are to describe smaller regions, while the WGS84 Web Mercator is made to use it for large-scale maps e.g. world maps. WGS84 Web Mercator is therefore the standard for web applications like google maps.
 </div>
 
 
